--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -18,23 +18,27 @@
     </li>
 </ul>
 
-<div class="container">
-    <div class="row">
-        @*row with title and NEW:button modal*@
-        <div class="col-sm-6">
-            <h1>Customers</h1>
+@*search bar*@
+<div class="row mt-3 pt-3 mb-3">
+    <div class="col-sm-4">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search by Order#, Customer# etc" id="tableSearch">
+            <div class="input-group-append">
+                <button class="input-group-text"><i class="fa fa-search"></i></button>
+            </div>
         </div>
-        @*---------------------------------------------------------------------------------*@
-        <!-- NEW: Button trigger modal -->
-        <div class=" col-sm-6 text-right">
-            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
-                <i class="far fa-plus-square"></i> Add customer
-            </button>
+    </div>
+    @*row with title and NEW:button modal*@
 
-        </div>
-
+    @*---------------------------------------------------------------------------------*@
+    <!-- NEW: Button trigger modal -->
+    <div class="col-sm-8 text-right">
+        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+            <i class="far fa-plus-square"></i> Add customer
+        </button>
     </div>
 </div>
+
 
 @*line break*@
 <div class="row">
@@ -75,7 +79,7 @@
                         @*column with the buttons*@
                         <div class="btn-group" role="group" aria-label="Basic example">
                             @*---------------------------------------------------------------------------------*@
-                            
+
                             <!-- INFO Button trigger modal -->
                             <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
                                 <i class="fas fa-info-circle"></i>
