--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -21,8 +21,8 @@
 
 
 @*search bar*@
-<div class="row mt-5 pt-3 mb-3">
-    <div class="col-md-4">
+<div class="row mt-3 pt-3 mb-3">
+    <div class="col-sm-4">
         <div class="input-group">
             <input type="text" class="form-control " placeholder="Search by Order#, Customer# etc" id="tableSearch">
             <div class="input-group-append">
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <div class="d-flex">
             <div class="dropdown mr-1">
                 <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
@@ -45,13 +45,13 @@
         </div>
     </div>
     @*start of date picker*@
-    <div class="col-md-3">
+    <div class="col-sm-3">
         <div class="md-form md-outline input-with-post-icon datepicker">
             <input placeholder="Select date" type="date" id="example" class="form-control">
             <label for="example">Start date</label>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
         <div class="md-form md-outline input-with-post-icon datepicker">
             <input placeholder="Select date" type="date" id="example" class="form-control">
             <label for="example">End date</label>
@@ -59,158 +59,164 @@
     </div>
     @*end of date picker*@
 </div>
-@*-------------------------------------------------------------------------*@
+
+@*line break*@
 <div class="row">
-
-
-    @*deliverde orders table*@
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <table class="table table-striped table-bordered dt-responsive display nowrap">
-                    <thead>
-                        <tr>
-                            <th scope="col">ORDER#</th>
-                            <th scope="col">ORDER DATE</th>
-                            <th scope="col">CUSTOMER NAME</th>
-                            <th scope="col">AMOUNT</th>
-                            <th scope="col">ORDER TOTAL</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-
-                        <tr>
-                            <th scope="row">1</th>
-
-                            <td>15/03/2021 </td>
-                            <td>andy</td>
-                            <td> 4</td>
-                            <td>239 </td>
-                            <td>
-                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                                    <i class="fas fa-info-circle"></i>
-                                </button>
-                                <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                    <i class="far fa-trash-alt"></i>
-                                </button>
-                            </td>
-                        </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
+    <div class="col">
+        <hr>
     </div>
-    @*order detail modal *@
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" style="max-width: 1000px" role="document">
-            <div class="DeckelModal modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            @*Left side*@
-                            <div class="col-md-6">
-                                <h3 class="d-flex justify-content-between align-items-center mb-3">
-                                    Purchased products
-                                    <span class="badge bg-primary rounded-pill">3</span>
-                                </h3>
-                                <hr />
+</div>
 
-                                <ul class="list-group mb-3">
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <div>
-                                            <h6 class="my-0">Product name</h6>
-                                            <small class="text-muted">Brief description</small>
-                                        </div>
-                                        <span class="text-muted">$12</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <div>
-                                            <h6 class="my-0">Second product</h6>
-                                            <small class="text-muted">Brief description</small>
-                                        </div>
-                                        <span class="text-muted">$8</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <div>
-                                            <h6 class="my-0">Third item</h6>
-                                            <small class="text-muted">Brief description</small>
-                                        </div>
-                                        <span class="text-muted">$5</span>
-                                    </li>
-                                </ul>
+@*-------------------------------------------------------------------------*@
 
-                            </div>
-                            @*Right Side*@
-                            <div class="col-md-6">
-                                <h3>
-                                    Order Details
-                                </h3>
-                                <hr />
+@*deliverde orders table*@
 
-                                <div class="card" style="width: 100%;">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Twitter, Inc</h5>
-                                        <p class="card-text">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
-                                        <abbr title="Phone">Phone:</abbr> (123) 456-7890
-                                        <br />
-                                        <br />
-                                        <a href="#" class="btn btn-primary">Change</a>
+<div class="row">
+    <div class="col-sm-12">
+        <table class="table table-striped table-bordered dt-responsive display nowrap">
+            <thead>
+                <tr>
+                    <th scope="col">ORDER#</th>
+                    <th scope="col">ORDER DATE</th>
+                    <th scope="col">CUSTOMER NAME</th>
+                    <th scope="col">AMOUNT</th>
+                    <th scope="col">ORDER TOTAL</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr>
+                    <th scope="row">1</th>
+
+                    <td>15/03/2021 </td>
+                    <td>andy</td>
+                    <td> 4</td>
+                    <td>239 </td>
+                    <td>
+                        <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                            <i class="fas fa-info-circle"></i>
+                        </button>
+                        <button type="button" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                            <i class="far fa-trash-alt"></i>
+                        </button>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+</div>
+
+@*order detail modal *@
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" style="max-width: 1000px" role="document">
+        <div class="DeckelModal modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Order #placeholder-OrderID</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        @*Left side*@
+                        <div class="col-md-6">
+                            <h3 class="d-flex justify-content-between align-items-center mb-3">
+                                Purchased products
+                                <span class="badge bg-primary rounded-pill">3</span>
+                            </h3>
+                            <hr />
+
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Product name</h6>
+                                        <small class="text-muted">Brief description</small>
                                     </div>
+                                    <span class="text-muted">$12</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Second product</h6>
+                                        <small class="text-muted">Brief description</small>
+                                    </div>
+                                    <span class="text-muted">$8</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Third item</h6>
+                                        <small class="text-muted">Brief description</small>
+                                    </div>
+                                    <span class="text-muted">$5</span>
+                                </li>
+                            </ul>
+
+                        </div>
+                        @*Right Side*@
+                        <div class="col-md-6">
+                            <h3>
+                                Order Details
+                            </h3>
+                            <hr />
+
+                            <div class="card" style="width: 100%;">
+                                <div class="card-body">
+                                    <h5 class="card-title">Twitter, Inc</h5>
+                                    <p class="card-text">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
+                                    <abbr title="Phone">Phone:</abbr> (123) 456-7890
+                                    <br />
+                                    <br />
+                                    <a href="#" class="btn btn-primary">Change</a>
                                 </div>
-                                <br />
-                                <ul class="list-group">
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <h6 class="my-0">Shipping cost:</h6>
-                                        <span class="text-muted">50 kr</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <h6 class="my-0">Extra cost:</h6>
-                                        <span class="text-muted">29 kr</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                                        <h6 class="my-0">Order cost:</h6>
-                                        <span class="text-muted">1550 kr</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between bg-light"></li>
-                                    <li class="list-group-item d-flex justify-content-between">
-                                        <span>Total (SEK)</span>
-                                        <strong>1629 kr</strong>
-                                    </li>
-                                </ul>
                             </div>
+                            <br />
+                            <ul class="list-group">
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Shipping cost:</h6>
+                                    <span class="text-muted">50 kr</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Extra cost:</h6>
+                                    <span class="text-muted">29 kr</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <h6 class="my-0">Order cost:</h6>
+                                    <span class="text-muted">1550 kr</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between bg-light"></li>
+                                <li class="list-group-item d-flex justify-content-between">
+                                    <span>Total (SEK)</span>
+                                    <strong>1629 kr</strong>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
+</div>
 
-    @*delete order modal*@
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal-deleteOrder" tabindex="-1" aria-labelledby="exampleModal-deleteLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="DeckelModal modal-content">
+@*delete order modal*@
+<!-- Modal -->
+<div class="modal fade" id="exampleModal-deleteOrder" tabindex="-1" aria-labelledby="exampleModal-deleteLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="DeckelModal modal-content">
 
-                <div class="modal-body">
-                    Delete Order?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger">Yes</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                </div>
+            <div class="modal-body">
+                Delete Order?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger">Yes</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
+</div>
 
