changed the detail button in customer order history view

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -92,7 +92,9 @@
                     $213.23
                 </td>
                 <td>
-                    <a data-toggle="modal" data-target="#exampleModalCenter" asp-action="Details"><i class="fas fa-list-ul"></i> Details</a>
+                    <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" asp-action="Details" style="background-color:transparent">
+                    <i class="fas fa-list-ul"></i> Details
+                    </button>
                 </td>
             </tr>
         </tbody>
