--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -35,7 +35,7 @@
     <!-- NEW: Button trigger modal -->
     <div class="col-sm-8 text-right">
         <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
-            <i class="far fa-plus-square"></i> Add customer
+            <i class="far fa-plus-square"></i> Add product
         </button>
     </div>
 </div>
