Add Sebatian to About page

--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -89,13 +89,17 @@
         <div class="row">
             <div class="col-md-8">
                 <p>
-                    Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                    Former athletes who made mistakes in life and started hanging out with the infamous propeller gang Las Gorra in Mexico.
+                    Alex contacted me and asked me to try to smuggle out their characteristic propeller caps so that Alex saw the potential
+                    to be able to sell them. Sebastian was apprehended by the gang and fled for his life but managed to get a number of their 
+                    caps with him. Sebastian is now working on continuing to smuggle out their caps so that we can sell them.
                 </p>
             </div>
             <div class="col-md-4">
                 <h3>
                     Sebastian Larsson
-                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Sebastian.jpg" height="200" />
+                
                 <dl>
                     <dt>Smuggler/Developer</dt>
                 </dl>
