--- a/Deckel-Shop/Views/Home/Careers.cshtml
+++ b/Deckel-Shop/Views/Home/Careers.cshtml
@@ -7,8 +7,6 @@
         margin-top: 100px;
         flex-wrap: nowrap;
     }
-
-
 </style>
 
 <div class="container-fluid">
@@ -37,8 +35,9 @@
                         <li>Have your own textile working kit</li>
                         <li>Trained in any sort of self defense</li>
                     </ul>
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                         Apply for the job
+
                     </button>
                 </div>
             </div>
@@ -64,36 +63,122 @@
                 <li>Profficient in using tools such as Github, Zenhub, Visual Studio, Visual Studio Code and SQL</li>
                 <li>Worked within the back-end industry for a minimum of 2 years</li>
             </ul>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                 Apply for the job
             </button>
         </div>
     </div>
 </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <h3>
-                Demon Tamer Desired!
-            </h3>
-            <p>
-                As an extremly succesful company you might wonder <strong>How did they get so succesful?</strong> and you guessed right, <strong>Demonic magic!</strong> for us to continue our work in selling the most exquisite
-                of products. We will require your aid in summoning demons to control the market! In the roll of a Demon tamer it will be up to you to ensure the safety of our employees <small>(from our summoned demons)</small>, make use the demons of which we use to controll our adveseries
-                but the most important task that will be given to you is to ensure total domination of your craft. The position will be well payed and the applicant will gain multiple benefits befiting of the job.
+<div class="row">
+    <div class="col-md-12">
+        <h3>
+            Demon Tamer Desired!
+        </h3>
+        <p>
+            As an extremly succesful company you might wonder <strong>How did they get so succesful?</strong> and you guessed right, <strong>Demonic magic!</strong> for us to continue our work in selling the most exquisite
+            of products. We will require your aid in summoning demons to control the market! In the roll of a Demon tamer it will be up to you to ensure the safety of our employees <small>(from our summoned demons)</small>, make use the demons of which we use to controll our adveseries
+            but the most important task that will be given to you is to ensure total domination of your craft. The position will be well payed and the applicant will gain multiple benefits befiting of the job.
 
-                Applicant will start working during the tenth month of the year on the 31 day, the contract will be binding for a minimum of twelve years. 
-            </p>
-            <p><strong>Desired qualifications</strong></p>
-            <ul>
-                <li>Atleast five years of Demon hunting/taming</li>
-                <li>Master qualification in Demonology</li>
-                <li>Able to work by yourself </li>
-                <li>Be proficient in demon speech</li>
-                <li>Have a trainee that can take over your work if the worst case scenario happens</li>
-            </ul>
-            <p><small>By accepting this vacancy we are not liable to any missing limbs, loss of life or possible diseases you may encounter</small></p>
-            <button type="button" class="btn btn-primary">
-                Apply for the job
-            </button>
+            Applicant will start working during the tenth month of the year on the 31 day, the contract will be binding for a minimum of twelve years.
+        </p>
+        <p><strong>Desired qualifications</strong></p>
+        <ul>
+            <li>Atleast five years of Demon hunting/taming</li>
+            <li>Master qualification in Demonology</li>
+            <li>Able to work by yourself </li>
+            <li>Be proficient in demon speech</li>
+            <li>Have a trainee that can take over your work if the worst case scenario happens</li>
+        </ul>
+        <p><small>By accepting this vacancy we are not liable to any missing limbs, loss of life or possible diseases you may encounter</small></p>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+            Apply for the job
+        </button>
+    </div>
+</div>
+
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Submit your resume</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+           
+            <div class="modal-dialog modal-dialog-centered " style="max-width: 1000px" role="document">
+                <div class="modal-dialog modal-dialog-centered">
+
+                    <form class="needs-validation" novalidate>
+                        <div class="form-row">
+                            <div class="form-row">
+                                <label for="firstName" class="form-label">First name</label>
+                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid first name is required.
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <label for="lastName" class="form-label">Last name</label>
+                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                                <div class="invalid-feedback">
+                                    Valid last name is required.
+                                </div>
+                            </div>
+                            </div>
+
+                            <div class="form-row">
+                                <label for="email" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                                <div class="invalid-feedback">
+                                    Please enter a valid email address.
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <label for="phoneNumber" class="form-label">Phone number</label>
+                                <input type="number" class="form-control" id="phonenumber" placeholder="">
+                                <div class="invalid-feedback">
+                                    Please enter a valid phone number
+                                </div>
+                            </div>
+
+                            <div class="form-row">
+                                <label for="aboutYourself" class="form-label">About yourself</label>
+                                <br>
+                                <textarea rows="5" cols="60" name="description">
+                                    
+                                  </textarea><br>
+
+
+                            </div>
+
+                            <div class="form-row">
+                                <div class="col-md-6 mr-auto">
+                                    <form action="/action_page.php">
+                                        <label for="upload" class="form-label">Upload your resume</label>
+                                        <input type="file" id="myFile" name="filename" m>
+                                        <label for="upload" class="form-label"></label>
+                                    </form>
+                                </div>
+                            </div>
+                            <hr class="my-4">
+                            
+                    </form>
+                </div>
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </div>
+
         </div>
     </div>
+</div>
