--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="container">
-    <h3 class="h3">shopping Demo-4 </h3>
+    <h3 class="h3">Products </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
@@ -15,7 +15,7 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-new-label">New</span>
+                    <span class="product-new-label">Hot</span>
                     <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
@@ -99,7 +99,7 @@
 </div>
 
 <div class="container">
-    <h3 class="h3">shopping Demo-4 </h3>
+    <h3 class="h3">Products </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
