--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -217,7 +217,7 @@
                             <a asp-area="" asp-controller="Home" asp-action="Careers">Careers</a>
                         </li>
                         <li class="mb-2">
-                            <a href="#!">Shipping and Delivery</a>
+                            <a asp-controller="Home" asp-action="ShippingDelivery">Shipping and Delivery</a>
                         </li>
                         <li class="mb-2">
                             <a asp-area="" asp-controller="Home" asp-action="Faq">FAQ</a>
