--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -210,7 +210,7 @@ body {
 
     .product-grid4 .social li a {
         color: #ad8649;
-        background: #4e4e4e;
+        background: #f2f2f2;
         font-size: 17px;
         line-height: 36px;
         width: 40px;
@@ -223,7 +223,7 @@ body {
 
         .product-grid4 .social li a:hover {
             color: #fff;
-            background: #16a085
+            background: #7d8185
         }
 
         .product-grid4 .social li a:after, .product-grid4 .social li a:before {
@@ -258,7 +258,7 @@ body {
 
     .product-grid4 .product-discount-label, .product-grid4 .product-new-label {
         color: #fff;
-        background-color: #1b6ec2;
+        background-color: #ad8649;
         font-size: 13px;
         font-weight: 800;
         text-transform: uppercase;
@@ -275,7 +275,7 @@ body {
     .product-grid4 .product-discount-label {
         left: auto;
         right: 10px;
-        background-color: #d7292a
+        background-color: #7d8185
     }
 
     .product-grid4:hover .product-new-label {
@@ -299,11 +299,11 @@ body {
         }
 
             .product-grid4 .title a:hover {
-                color: #16a085
+                color: #1b6ec2
             }
 
     .product-grid4 .price {
-        color: #16a085;
+        color: #4e4e4e;
         font-size: 17px;
         font-weight: 700;
         margin: 0 2px 15px 0;
