Swaped page Checkout

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -89,7 +89,7 @@
                         <partial name="_LoginPartial" />
                     </li>
                     <li class="nav-item ">
-                        <a class="fas fa-shopping-cart" asp-area="" asp-controller="Cart" asp-action="Checkout" style="font-size:48px; color:#a78e5a;"></a>
+                        <a class="fas fa-shopping-cart" asp-area="" asp-controller="Cart" asp-action="Index" style="font-size:48px; color:#a78e5a;"></a>
                     </li>
                 </ul>
             </div>
