--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -94,12 +94,18 @@
                     <td> 2</td>
                     <td>129 </td>
                     <td>
-                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                            <i class="fas fa-info-circle"></i>
-                        </button>
-                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                            <i class="far fa-trash-alt"></i>
-                        </button>
+                        <span data-toggle="tooltip" data-placement="bottom" title="info">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                <i class="fas fa-info-circle"></i>
+
+                            </button>
+                        </span>
+
+                        <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                <i class="far fa-trash-alt"></i>
+                            </button>
+                        </span>
                     </td>
                 </tr>
 
