--- a/Deckel-Shop/Views/Stock/Index.cshtml
+++ b/Deckel-Shop/Views/Stock/Index.cshtml
@@ -91,15 +91,21 @@
                     <td>50 </td>
                     <td>79 </td>
                     <td>
-                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
-                            <i class="fas fa-info-circle"></i>
-                        </button>
-                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
-                            <i class="far fa-edit"></i>
-                        </button>
-                        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
-                            <i class="far fa-trash-alt"></i>
-                        </button>
+                        <span data-toggle="tooltip" data-placement="bottom" title="info">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-details" style="background-color:transparent">
+                                <i class="fas fa-info-circle"></i>
+                            </button>
+                        </span>
+                        <span data-toggle="tooltip" data-placement="bottom" title="edit">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-customer" style="background-color:transparent">
+                                <i class="far fa-edit"></i>
+                            </button>
+                        </span>
+                        <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                            <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal-delete" style="background-color:transparent">
+                                <i class="far fa-trash-alt"></i>
+                            </button>
+                        </span>
                     </td>
                 </tr>
 
