--- a/Deckel-Shop/Views/Home/Contact.cshtml
+++ b/Deckel-Shop/Views/Home/Contact.cshtml
@@ -2,15 +2,15 @@
 <h3>Contact Us</h3>
 <form action="https://formsubmit.co/deckelshop@gmail.com" method="POST">
     <label for="name">Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    <input type="text" id="fname" class="form-control" name="firstname" placeholder="Your name..">
 
     <label for="lname">Email</label><br />
-    <input type="email" id="email" name="email" placeholder="Your last name..">
+    <input type="email" class="form-control" id="email" name="email" placeholder="Your last name..">
 
 
 
     <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
+    <textarea id="subject" class="form-control" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <br />
+    <input type="submit" class="btn btn-primary" value="Submit">
 </form>
