Removed unessesary code checkout, changes to css + index

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -40,6 +40,10 @@
             right: 0;
             padding: 50px;
         }
+        .container-p .btn{
+            color:#000000;
+            background-color:white;
+        }
 
         .overlay-image {
             position: absolute;
