--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="container">
-    <h3 class="h3">Products </h3>
+    <h3 class="h3">Top quality propeler caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
@@ -16,7 +16,6 @@
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                     <span class="product-new-label">Hot</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Women's Black Top</a></h3>
@@ -38,7 +37,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-discount-label">-12%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
@@ -60,8 +58,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-new-label">New</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Women's Black Top</a></h3>
@@ -83,8 +79,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-new-label">New</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Women's Black Top</a></h3>
@@ -99,7 +93,7 @@
 </div>
 
 <div class="container">
-    <h3 class="h3">Products </h3>
+    <h3 class="h3">Special propeler caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
@@ -112,8 +106,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-new-label">New</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Women's Black Top</a></h3>
@@ -135,7 +127,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-discount-label">-12%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
@@ -157,8 +148,6 @@
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
-                    <span class="product-new-label">New</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
                     <h3 class="title"><a href="#">Women's Black Top</a></h3>
