changed jennys profile pic

--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -74,10 +74,12 @@
             <div class="col-md-4">
                 <h3>
                     Jenny Wong
-                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
-                <dl>
-                    <dt>Visionary/Communication strategist</dt>
-                </dl>
+                </h3>
+                @*<img class="img-thumbnail" alt="Bootstrap Image Preview" />*@
+                         <img src="~/Image/jenny.jpg" height="200"/>
+                     <dl>
+                         <dt>Visionary/Communication strategist</dt>
+                     </dl>
             </div>
             <div class="col-md-8">
                 <p>
