--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -75,8 +75,7 @@
                 <h3>
                     Jenny Wong
                 </h3>
-                @*<img class="img-thumbnail" alt="Bootstrap Image Preview" />*@
-                         <img src="~/Image/jenny.jpg" height="200"/>
+                <img class="img-thumbnail w-75" alt="Bootstrap Image Preview" src="~/Image/jenny.jpg" />
                      <dl>
                          <dt>Visionary/Communication strategist</dt>
                      </dl>
