swapped mail text- Added css for all btn btn primary

--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -205,7 +205,7 @@
                             <span class="fa-li"><i class="far fa-map"></i></span>New York, Avenue Street 10
                         </li>
                         <li class="mb-2"><span class="fa-li"><i class="fas fa-phone-alt"></i></span>042 876 836 908</li>
-                        <li class="mb-2"><span class="fa-li"><i class="far fa-envelope"></i></span>Deckel-Shop@Yahoo.com</li>
+                        <li class="mb-2"><span class="fa-li"><i class="far fa-envelope"></i></span>deckelshop@gmail.com</li>
                         <li><span class="fa-li"><i class="far fa-clock"></i></span>Monday - Friday: 10-17</li>
                     </ul>
 
