--- a/Deckel-Shop/wwwroot/css/site.css
+++ b/Deckel-Shop/wwwroot/css/site.css
@@ -20,9 +20,12 @@ for details on configuring this project to bundle and minify static web assets. 
             }
 }
 
-.btn-primary{
-    background-color: black !important;
+.btn-primary {
+    color: #e9cf97 !important;
+    background-color: #4e4e4e !important;
+    text-decoration: underline;
 }
+
 
 
 .DeckelModal {
