--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -111,14 +111,20 @@
             <div class="col-md-4">
                 <h3>
                     Fisnik Haliti
-                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/fisnik.jpg"/>
                 <dl>
-                    <dt>Weapon expert/Model/Developer</dt>
+                    <dt>Weapon expert/Stripper/Developer</dt>
                 </dl>
             </div>
             <div class="col-md-8">
                 <p>
-                    Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+                    I used to be in the marines. As a weapon expert it was my job to get evaluate every marine shooting skills. I got fired
+                    after I mistook a bazooka for a 9mm pistol and blew up our entire camp, 10 people lost their life that day. After i got fired
+                    from the marines i was down bad, and with my bad spending habits on proppeler caps i was bankrupt. I needed some money so i started
+                    stripping in Amsterdam the money was pretty good but still i wasn't happy. One day i meet Alex in a "shop" ;) and he told me
+                    about a business idea but i wasn't really sure if my pimp would let me go because i was employee of the month for 72 month straight
+                    and he would lose alot of money. After i told him we would send him a free proppler cap he agreed to let me go. I make less money
+                    now but its less work and i get to enjoy a hookah outside and have peace of mind.
                 </p>
             </div>
         </div>
