New images for Carousen main index, Added more images for product site use. (added said images to product side) Changed text on product  index

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -65,39 +65,30 @@
         </ol>
         <div class="carousel-inner" data-interval="500">
             <div class="carousel-item active">
-                <div class="overlay-image" style="background-image: url(./image/Surprised-propeller\ keps.jpg);"></div>
+                <div class="overlay-image" style="background-image: url('https://media.istockphoto.com/photos/man-wearing-a-propeller-beanie-picture-id187105396?k=6&m=187105396&s=612x612&w=0&h=fGHCP98-7HXYC4p89Fl9Zi_doRKDo-IA52cLcUMZDeY=');"></div>
                 <div class="container-p">
                     <h1>True pleasure</h1>
                     <p>
                         The joy of the propeler cap, brings smiles upon not only yourself. But those around you
                     </p>
-                    <a href="#" class="btn btn-lg btn-primary">
-                        Shop
-                    </a>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-image" style="background-image:url(./image/Surprised-propeller\ keps.jpg);"></div>
+                <div class="overlay-image" style="background-image: url('https://thumbs.dreamstime.com/b/caucasian-woman-wearing-propeller-cap-2043903.jpg');"></div>
                 <div class="container-p">
                     <h1>Happyness neverending</h1>
                     <p>
                         Look at our happy customers, they have felt never ending joy since buying the products from our store!
                     </p>
-                    <a href="#" class="btn btn-lg btn-primary">
-                        Shop
-                    </a>
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-image" style="background-image:url(./image/obamahatt.jpg);"></div>
+                <div class="overlay-image" style="background-image: url('https://www.pulju.net/images/products/propellihattu_orig.jpg');"></div>
                 <div class="container-p">
                     <h1>Dont be out be in!</h1>
                     <p>
                         Famous celebreties around the world enjoys our products, why not join the propeler club? You will not regret it!
                     </p>
-                    <a href="#" class="btn btn-lg btn-primary">
-                        Shop
-                    </a>
                 </div>
             </div>
         </div>
@@ -117,11 +108,9 @@
         <div class="row">
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/obamahatt.jpg" width="500" height="500" />
-                <button href="#" class="btn btn-lg btn-primary">Join the club</button>
             </div>
             <div class="col-md-6">
                 <img  id="Test" alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
-                <button href="#" class="btn btn-lg btn-primary">Just a click away</button>
             </div>
         </div>
     </div>
@@ -132,7 +121,6 @@
         <div class="row">
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl.jpg" height="670" />
-                <button href="#" class="btn btn-lg btn-primary">Yarr!</button>
             </div>
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl2.jpg" height="670"/>
