--- a/Deckel-Shop/Views/Product/Index.cshtml
+++ b/Deckel-Shop/Views/Product/Index.cshtml
@@ -2,14 +2,14 @@
 
 
 <div class="container">
-    <h3 class="h3">Top quality propeler caps </h3>
+    <h3 class="h3">Popular Propeler Caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
+                        <img class="pic-1" src="/Image/Model1v1.jpg">
+                        <img class="pic-2" src="/Image/Model1v2.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -18,9 +18,9 @@
                     <span class="product-new-label">Hot</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">Original Propeler Cap</a></h3>
                     <div class="price">
-                        $14.40
+                        $6.40
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -30,8 +30,8 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-3.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-4.jpg">
+                        <img class="pic-1" src="/Image/Model2v1.jpg">
+                        <img class="pic-2" src="/Image/Model2v2.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -39,9 +39,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
+                    <h3 class="title"><a href="#">Cap with engine</a></h3>
                     <div class="price">
-                        $17.60
+                        $11.20
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -51,8 +51,8 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-5.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-6.jpg">
+                        <img class="pic-1" src="/Image/Model3v1.jpg">
+                        <img class="pic-2" src="/Image/Model3v2.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -60,9 +60,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">Pirate's Propeler Cap</a></h3>
                     <div class="price">
-                        $14.40
+                        $7.60
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -72,8 +72,8 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
+                        <img class="pic-1" src="/Image/Model4v1.jpg">
+                        <img class="pic-2" src="/Image/Model4v2.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -81,9 +81,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">Sunscreen Edition</a></h3>
                     <div class="price">
-                        $14.40
+                        $12.10
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -93,14 +93,14 @@
 </div>
 
 <div class="container">
-    <h3 class="h3">Special propeler caps </h3>
+    <h3 class="h3">Exclusive Propeler caps </h3>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-1.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-2.jpg">
+                        <img class="pic-1" src="/Image/RobertMayerWithCap.jpg">
+                        <img class="pic-2" src="/Image/GuldPropCap.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -108,9 +108,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">First Propeler Cap</a></h3>
                     <div class="price">
-                        $14.40
+                        $1560.99
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -120,8 +120,8 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-3.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-4.jpg">
+                        <img class="pic-1" src="/Image/PirateGirl2.jpg">
+                        <img class="pic-2" src="/Image/PiratePropellerCap.png">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -129,9 +129,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Men's Blue Shirt</a></h3>
+                    <h3 class="title"><a href="#">Captains Cap</a></h3>
                     <div class="price">
-                        $17.60
+                        $29.99
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -141,8 +141,8 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-5.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-6.jpg">
+                        <img class="pic-1" src="/Image/ObamaCap.jpg">
+                        <img class="pic-2" src="/Image/ObamaManequin.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
@@ -150,9 +150,9 @@
                     </ul>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">Obama's Used Cap</a></h3>
                     <div class="price">
-                        $14.40
+                        $520.99
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
@@ -162,20 +162,19 @@
             <div class="product-grid4">
                 <div class="product-image4">
                     <a href="#">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-7.jpg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo5/images/img-8.jpg">
+                        <img class="pic-1" src="/Image/AdmiralCap.jpg">
+                        <img class="pic-2" src="/Image/AdmiralCapManequin.jpg">
                     </a>
                     <ul class="social">
                         <li><a href="#" data-tip="Add to Wishlist"><i class="fa fa-shopping-bag"></i></a></li>
                         <li><a href="#" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
                     </ul>
                     <span class="product-new-label">New</span>
-                    <span class="product-discount-label">-10%</span>
                 </div>
                 <div class="product-content">
-                    <h3 class="title"><a href="#">Women's Black Top</a></h3>
+                    <h3 class="title"><a href="#">AdmiralCap</a></h3>
                     <div class="price">
-                        $14.40
+                        $59.99
                     </div>
                     <a class="add-to-cart" href="">ADD TO CART</a>
                 </div>
