Fixed profile pictures in about + added text to jenny and yahya

--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -57,7 +57,8 @@
         <div class="row">
             <div class="col-md-8">
                 <p>
-                    Det var antigen det skitet eller jobba kvar på lagret
+                    "It was either this or keep working at the warehouse" Yahya told the interviewer. <small>Secretly though Yahya was a multi-billionare supporting the propeler cap buissnes to ensure 
+                    the joy of the propeler cap is spread throughout the world</small>
                 </p>
             </div>
             <div class="col-md-4">
@@ -82,7 +83,10 @@
             </div>
             <div class="col-md-8">
                 <p>
-                    A mad scientist that's crazy enough to hang out with this team. She decided to travel 365 days a year to find inspiration for new propeller caps.
+                    A <strong>mad visionary</strong> that travels the world 365 days a year to find both new inspiring propeler cap blueprints to freshen up the stock of Deckel Inc but also old ancient propeler caps lost in time.
+                    "One day i was lost in the deserts of Egypt looking for the ancient propeler cap of Ramesses II, though a sudden sandstorm came before me and i lost my guide and gear. Now lost and thirsty i sat down awaiting my end.
+                    But then i felt a hand upon my shoulder and a sudden propeler cap filled with water infront of my face. I turned around to see Andreas there smiling. He said <strong>"I have a business proposal for you."</strong>
+                    And thats how i joined the company"
                 </p>
             </div>
         </div>
@@ -111,7 +115,7 @@
             <div class="col-md-4">
                 <h3>
                     Fisnik Haliti
-                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/fisnik.jpg"/>
+                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/fisnik.jpg" height="200"/>
                 <dl>
                     <dt>Weapon expert/Stripper/Developer</dt>
                 </dl>
