--- a/Deckel-Shop/Views/Shared/_Layout.cshtml
+++ b/Deckel-Shop/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Profile" asp-action="administrator">Admin</a></li>
 
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Product" asp-action="index">Product</a></li>
-                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Home" asp-action="About">About Us</a></li>
+                    <li class="nav-item "><a style="color:#a78e5a" class="nav-link  " asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item "><a style="color:#a78e5a" class="nav-link " asp-area="" asp-controller="Home" asp-action="Contact">Contacts</a></li>
                     <li class="nav-item ">
                         <form class="form-inline">
