Changed picture index

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -107,7 +107,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6">
-                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/obamahatt.jpg" width="500" height="500" />
+                <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/Surprised-propeller keps.jpg" width="500" height="500" />
             </div>
             <div class="col-md-6">
                 <img  id="Test" alt="Bootstrap Image Preview" class="w-100" src="~/Image/Happy propeler Man.png" width="500" height="500" />
