--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-8">
                 <p>
-                    Having only read the ancient tales about the propeller cap, I was determined to set out on a journey looking for its origin. <strong>It was not easy.</strong> The journey took me all over the world and I met lots of interesting people, some of them working here with me today! It was at Chichen Itza that I found what I had been looking for all this time. The ancient tales were true. The propeller cap actually had its origin with the mayan civilization, and through their old knowledge of the world, they had infused the propeller cap with magical abilities. At first i was in awe. But i soon realized my plan on how to harness its powers. Thats when i started this company.
+                    Having only read the ancient tales about the propeller cap, I was determined to set out on a journey looking for its origin. <strong>It was not easy.</strong> The journey took me all over the world and I met lots of interesting people, some of them working here with me today! It was at Chichen Itza that I found what I had been looking for all this time. The ancient tales were true. The propeller cap actually had its origin with the mayan civilization, and through their old knowledge of the world, they had infused the propeller cap with magical abilities. At first i was in awe. But i soon realized my plan on how to harness its powers. That's when i started this company.
                 </p>
             </div>
             <div class="col-md-4">
