--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -9,7 +9,7 @@
 <div class="row mt-3 pt-3 mb-3">
     <div class="col-sm-4">
         <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search by Order#, Customer# etc" id="tableSearch">
+            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc">
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
@@ -53,7 +53,7 @@
 </div>
 @*-------------------------------------------------------------------------*@
 <div class="row">
-    <table class="table table-striped table-bordered dt-responsive display nowrap" id="tblOrderHistory">
+    <table class="table table-striped table-bordered dt-responsive display nowrap">
         <thead>
             <tr>
                 <th>
@@ -74,7 +74,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody id="customerOrderHistoryTable">
+        <tbody class="tableSearch">
             <tr>
                 <td>
                     S123456789
