--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -24,7 +24,7 @@
 <div class="row mt-3 pt-3 mb-3">
     <div class="col-sm-4">
         <div class="input-group">
-            <input type="text" class="form-control " placeholder="Search by Order#, Customer# etc" id="tableSearch">
+            <input type="text" class="form-control searchbarForTable" placeholder="Search by Order#, Customer# etc" >
             <div class="input-group-append">
                 <button class="input-group-text"><i class="fa fa-search"></i></button>
             </div>
@@ -84,7 +84,7 @@
                     <th scope="col"></th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="tableSearch">
 
                 <tr>
                     <th scope="row">1</th>
