Fixed button on index main (picture)

--- a/Deckel-Shop/Views/Home/Index.cshtml
+++ b/Deckel-Shop/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
             </div>
             <div class="col-md-6">
                 <img alt="Bootstrap Image Preview" class="w-100" src="~/Image/PirateGirl2.jpg" height="670"/>
-                <button href="#" class="btn btn-lg btn-primary">Im in!</button>
+                <button type="button" class="btn btn-lg btn-primary" onclick="location.href = 'product/index';">Im in!</button>
             </div>
         </div>
     </div>
